# Monitoring-and-Auditing-Data-Access-in-Big-Data-Environments

./: .gitignore  Makefile  PROJECT_SUMMARY.md  README.md  pyproject.toml  requirements.txt
Monitoring and Auditing Data Access (Big Data)/: Anomaly_detection.py  DSA4030-Monitoring and auding data access-Methodology.docx  Dashboard.xlsx  Monitoring Audit Report.docx  Monitoring Setup.docx  README.md  access_logs (1).csv  monitoring_setup.ipynb
assets/images/: README.md
tests/: test_anomaly_detection.py
